全面使用basedio basedao