@@ -1,5 +1,16 @@
 package chengweiou.universe.leob.controller.mg;
 
+import java.util.List;
+
+import com.google.firebase.messaging.Message;
+import com.google.firebase.messaging.MulticastMessage;
+import com.google.firebase.messaging.Notification;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
 import chengweiou.universe.blackhole.exception.FailException;
 import chengweiou.universe.blackhole.exception.ParamException;
 import chengweiou.universe.blackhole.model.Builder;
@@ -9,18 +20,7 @@ import chengweiou.universe.leob.manager.FcmManager;
 import chengweiou.universe.leob.model.Push;
 import chengweiou.universe.leob.model.SearchCondition;
 import chengweiou.universe.leob.model.entity.Device;
-import chengweiou.universe.leob.service.device.DeviceService;
-
-import com.google.firebase.messaging.Message;
-import com.google.firebase.messaging.MulticastMessage;
-import com.google.firebase.messaging.Notification;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
-import java.util.stream.Collectors;
+import chengweiou.universe.leob.service.device.DeviceDio;
 
 @RestController
 @RequestMapping("mg")
@@ -28,15 +28,15 @@ public class PushController {
     @Autowired
     private FcmManager fcmManager;
     @Autowired
-    private DeviceService deviceService;
+    private DeviceDio dio;
     @PostMapping("/push")
     public Rest<Long> push(Push e) throws ParamException, FailException {
         Valid.check("push.person", e.getPerson()).isNotNull();
         Valid.check("push.person.id", e.getPerson().getId()).is().positive();
         Valid.check("push.name", e.getName()).is().lengthIn(500);
         Valid.check("push.content", e.getContent()).is().lengthIn(500);
-        List<Device> deviceList = deviceService.find(new SearchCondition(), Builder.set("person", e.getPerson()).to(new Device()));
-        List<String> tokenList = deviceList.stream().filter(device -> device.getActive()).map(Device::getToken).collect(Collectors.toList());
+        List<Device> deviceList = dio.find(new SearchCondition(), Builder.set("person", e.getPerson()).to(new Device()));
+        List<String> tokenList = deviceList.stream().filter(device -> device.getActive()).map(Device::getToken).toList();
         long failCount = fcmManager.send(MulticastMessage.builder().addAllTokens(tokenList)
                 .setNotification(Notification.builder().setTitle(e.getName()).setBody(e.getContent()).build()
             ).build());
