@@ -1,16 +1,15 @@
 package chengweiou.universe.leob.data;
 
 
-import chengweiou.universe.leob.model.SearchCondition;
-import chengweiou.universe.leob.model.entity.Device;
-import chengweiou.universe.leob.service.device.DeviceDio;
+import java.util.Comparator;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
+import chengweiou.universe.leob.model.SearchCondition;
+import chengweiou.universe.leob.model.entity.Device;
+import chengweiou.universe.leob.service.device.DeviceDio;
 
 @Component
 public class Data {
@@ -19,6 +18,6 @@ public class Data {
     public List<Device> deviceList;
 
     public void init() {
-        deviceList = deviceDio.find(new SearchCondition(), new Device()).stream().sorted(Comparator.comparingLong(Device::getId)).collect(Collectors.toList());
+        deviceList = deviceDio.find(new SearchCondition(), new Device()).stream().sorted(Comparator.comparingLong(Device::getId)).toList();
     }
 }
